<resources>
    <string name="app_name">Smieci</string>
    <string name="NajblizszyWywoz">Najbliższy wywóz śmieci:</string>
    <string name="papiery">papiery</string>
    <string name="szklo">szkło</string>
    <string name="bio">bio</string>
    <string name="metale">metale i tworzywa sztuczne</string>
    <string name="Wywozka_papiery">Wywózka odpadów papierowych</string>
    <string name="Wywozka_szklo">Wywózka odpadów szklanych</string>
    <string name="Wywozka_bio">Wywózka odpadów biodegradowalnych</string>
    <string name="Wywozka_metal">Wywózka odpadów metalowych i tworzyw sztucznych </string>

    <!-- Zasady segregacji -->

    <string name="ZasadySegregacji"><b>Zasady segregacji śmieci:</b></string>
    <string name="OpisMetal">
        \n<font color="#CDB500"><b><u>Metale i tworzywa sztuczne:</u></b></font>
        \n<font color="#3FC838">WRZUCAĆ:</font>  butelki po napojach (zgniecione butelki PET), opakowania z tworzyw sztucznych, opakowania wielomateriałowe (np. kartony po mleku, sokach-zgniecione), reklamówki i inne folie (niezabrudzone), puszki po napojach i konserwach, folię aluminiową (niezabrudzoną), opakowania po chemii gospodarczej, doniczki plastikowe.
        \n<font color="#E51717">NIE WRZUCAĆ:</font> butelek i pojemników z zawartością, leków i zużytych artykułów medycznych, części samochodowych, zużytych baterii i akumulatorów, zużytego sprzętu elektrycznego i AGD tworzyw piankowych, gum, silikonów, pieluch jednorazowych (pampersów), podpasek, ubrań.
    </string>
    <string name="OpisPapier">
        \n<font color="#137CC8"><b><u>Papier:</u></b></font>
        \n<font color="#3FC838">WRZUCAĆ:</font> opakowania z papieru, tektury, kartonu(złożone), gazety i czasopisma, katalogi i ulotki, papier, zadrukowane kartki, książki i zeszyty, torebki i worki papierowe, papier pakowy.
        \n<font color="#E51717">NIE WRZUCAĆ:</font> papieru zabrudzonego, zatłuszczonego, wilgotnego lub mokrego, papieru na stałe zgrzanego z folią, opakowań wielomateriałowych (np. kartonów po mleku i napojach), pieluch jednorazowych i podpasek, zużytych ręczników kuchennych i chusteczek higienicznych, papierowych worków (np. po cemencie, nawozach i innych materiałach budowlanych), tapet.
    </string>
    <string name="OpisSzklo">
        \n<font color="#098C0D"><b><u>Szkło:</u></b></font>
        \n<font color="#3FC838">WRZUCAĆ:</font> czyste opakowania szklane (puste), butelki, słoiki, flakony.
        \n<font color="#E51717">NIE WRZUCAĆ:</font> ceramiki, doniczek, porcelany, kryształów, szkła żaroodpornego, żarówek i świetlówek, reflektorów, luster, szyb (np. samochodowych i okiennych), termometrów, stłuczki szklanej.
    </string>
    <string name="OpisBio">
        \n<font color="#671E08"><b><u>Bio:</u></b></font>
        \n<font color="#3FC838">WRZUCAĆ:</font> odpadki warzywne i owocowe (obierki itp.), drobne gałązki drzew i krzewów, skoszoną trawę, liście, kwiaty, trociny i korę drzew, resztki jedzenia (bez mięs), skorupki od jajek, fusy po kawie i herbacie.
        \n<font color="#E51717">NIE WRZUCAĆ:</font> kości zwierząt, resztek mięsa, worków foliowych, odchodów zwierzęcych, drewna impregnowanego, płyt wiórowych i MDF, kamieni.
    </string>

    <!-- Rejestracja -->
    <string name="zarejestruj">Zarejetruj się</string>
    <string name="konto">Masz już konto?</string>
    <string name="konto_zaloguj"><u>Zaloguj się</u></string>

    <!-- Logowanie -->
    <string name="zaloguj">Zaloguj się</string>
    <string name="brak_konta">Nie masz jeszcze konta?</string>
    <string name="brak_konta_zaloguj"><u>Zarejestruj się</u></string>

    <!-- Przyciski -->

    <string name="pomin">Pomiń</string>
    <string name="zatwierdz">Zatwierdź</string>
    <string name="anuluj">Anuluj</string>
    <string name="uzyj_loka">Użyj lokalizacji</string>
    <string name="wyloguj">Wyloguj się</string>

    <!-- Input tekst -->
    <string name="email">Email</string>
    <string name="haslo">Hasło</string>
    <string name="pow_haslo">Powtórz hasło</string>


    <!-- Informacje -->
    <string name="tekst_informacje">Podaj nam kilka informacji o sobie...</string>

    <string name="zamieszkały">Zamieszkały/a</string>
    <string name="niezamieszkały">Niezamieszkały/a</string>

    <string name="jednorodzinna">Jednorodzinna</string>
    <string name="wielorodzinna">Wielorodzinna</string>

    <string name="Wysoka">Wysoka</string>
    <string name="Pozostałe">Pozostałe</string>

    <string name="segre">Segregujący</string>
    <string name="nie_segre">Niesegregujący</string>

    <string name="tekst_lokalizacja">Dodaj swoje miejsce zamieszkania</string>

    <string name="gmina">Gmina</string>
    <string name="miejscowosc">Miejscowość</string>
    <string name="ulica">Ulica</string>

    <string name="tekst_lokalizacja_potw">Potwierdź swój adres zamieszkania</string>

    <string name="lub">lub</string>

    <!-- Lokalizacja - potwierdź -->

    <string name="gmina_input">lorem ipsum</string>
    <string name="miejscowosc_input">lorem ipsum</string>
    <string name="ulica_input">lorem ipsum</string>

    <!-- Panel Użytkownika -->
    <string name="user_name">User_name</string>
    <string name="powiadomienia">Powiadomienia aplikacji</string>

    <string name="ciemny_motyw">Ciemny motyw</string>

    <string name="adres_edytuj">Edytuj adres zamieszkania</string>
    <string name="zmien_haslo">Zmień hasło</string>

    <!-- Edycja Informacji/Lokalizacji -->
    <string name="informacje">Informacje</string>
    <string name="lokalizacja">Lokalizacja</string>

    <!-- Zmiana Hasla -->
    <string name="aktualne_haslo">Aktualne hasło</string>
    <string name="nowe_haslo">Nowe hasło</string>
    <string name="powtorz_nowe_haslo">Powtórz nowe hasło</string>
    <string name="zmiana_hasla">Zmień swoje hasło </string>

    <!-- Nawigacja boczna -->
    <string name="strona_glowna">Strona główna</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="o_nas">O nas</string>
    <string name="user_email">sample@email.com</string>

    <string name="open">Otwórz</string>
    <string name="close">Zamknij</string>


</resources>