<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.androidex1.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ShowIn="nagivation_view"
    >
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/strona_glowna" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:title="@string/ustawienia"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/o_nas"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/wyloguj"/>
        </menu>
    </item>
</menu>