<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EkranLogowania"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green"
        >


        <Button
            android:id="@+id/buttonAnuluj"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/przycisk_anuluj"
            android:text="@string/anuluj"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/przycisk_zatwierdz"
            android:text="@string/zatwierdz"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.78" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="590dp"
            android:background="@drawable/toggle_options_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggleOp4_1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/segre"
                android:textOn="@string/segre"
                android:textSize="12sp" />

            <View
                android:id="@+id/line_4"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/vertical_line" />

            <ToggleButton
                android:id="@+id/toggleOp4_2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/nie_segre"
                android:textOn="@string/nie_segre"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/toggle_options_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggleOp2_1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/jednorodzinna"
                android:textOn="@string/jednorodzinna"
                android:textSize="12sp" />

            <View
                android:id="@+id/line_2"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/vertical_line" />

            <ToggleButton
                android:id="@+id/toggleOp2_2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/wielorodzinna"
                android:textOn="@string/wielorodzinna"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/toggle_options_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggleOp1_1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/zamieszkały"
                android:textOn="@string/zamieszkały"
                android:textSize="12sp" />

            <View
                android:id="@+id/line_1"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/vertical_line" />

            <ToggleButton
                android:id="@+id/toggleOp1_2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/niezamieszkały"
                android:textOn="@string/niezamieszkały"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="520dp"
            android:background="@drawable/toggle_options_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggleOp3_1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/Wysoka"
                android:textOn="@string/Wysoka"
                android:textSize="12sp" />

            <View
                android:id="@+id/line_3"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/vertical_line" />

            <ToggleButton
                android:id="@+id/toggleOp3_2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_background"
                android:checked="false"
                android:stateListAnimator="@null"
                android:text="ToggleButton"
                android:textColor="@drawable/toggle_button_text_color"
                android:textOff="@string/Pozostałe"
                android:textOn="@string/Pozostałe"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/dark_green_bg"
            android:gravity="center">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user_icon"
                app:srcCompat="@drawable/user_icon" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="250dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggleLokalizacja"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/toggle_option_informacje"
                android:stateListAnimator="@null"
                android:textOn="@string/informacje"
                android:textOff="@string/informacje"
                android:checked="true"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_text_color"
                />

            <ToggleButton
                android:id="@+id/toggleInformacje"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textOn="@string/lokalizacja"
                android:textOff="@string/lokalizacja"
                android:background="@drawable/toggle_option_lokalizacja"
                android:stateListAnimator="@null"
                android:checked="false"
                android:textSize="16sp"
                android:textColor="@drawable/toggle_button_text_color"
                android:layout_weight="1"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>